# ROS-Roomba-robber-hunter

exercise2/: CMakeLists.txt  package.xml
exercise2/launch/: walk.launch
exercise2/msg/: Movement.msg
exercise2/scripts/: walk_service_node.py
exercise2/srv/: ColorSrv.srv  Walk.srv
exercise3/: CMakeLists.txt  package.xml
exercise3/launch/: amcl_simulation.launch  combined.launch  combined_real.launch  combined_task1.launch
exercise3/maps/: best_map.xcf  better_map.pgm  better_map.yaml  first_map.pgm  first_map.xcf  real_map.pgm  real_map.yaml  task3_map.pgm  task3_map.yaml  task3_map2.pgm  task3_map2.yaml
exercise3/scripts/: goals.py  real_goals.py
exercise3/src/: hw3_goals.cpp  task1_goals.cpp
exercise3/worlds/: rins.world
exercise4/: CMakeLists.txt  package.xml
exercise4/scripts/: face_localizer_dnn  play_sound.py  real_face_lozalizer_dnn
exercise6/: CMakeLists.txt
exercise6/launch/: rins_world.launch
exercise6/scripts/: color_service.py  detect_rings
exercise6/src/: cylinder_segmentation.cpp  example_voxelgrid.cpp
exercise7/: CMakeLists.txt  package.xml
exercise7/launch/: rins_world.launch
exercise7/scripts/: detect_parking.py
exercise7/worlds/: rins.world
task3/: CMakeLists.txt  package.xml
task3/launch/: rins_world.launch
task3/msg/: PosterMessage.msg
task3/scripts/: approach_manager.py  brain.py  compare_image_manager.py  conversation_manager.py  cylinder_face_manager.py  cylinder_manager.py  face_and_poster_detector.py  face_compare.py  goals_task3.py  goals_task3_improved.py  marker_manager.py  move_arm.py  parking_detector.py  parking_manager.py  poster_detector.py  poster_manager.py  speaking_manager.py  task3_goals.py
task3/worlds/: rins.world
turtlebot_custom_navigation/launch/: amcl_simulation.launch
turtlebot_custom_navigation/param/: costmap_common_params.yaml
